--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:remote": "ngrok http 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,6 +18,7 @@
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "ngrok": "^5.0.0-beta.2",
     "pretty-file-tree": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
