--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.5",
+    "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
