--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@zip.js/zip.js": "^2.7.45",
     "classnames": "^2.5.1",
+    "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
