--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.5",
     "rehype-external-links": "^3.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-javascript": "^0.21.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
