feat: remove function implementation with tree-sitter

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "tree-sitter": "^0.21.1",
-    "tree-sitter-javascript": "^0.21.3"
+    "tree-sitter-javascript": "^0.21.3",
+    "tree-sitter-python": "^0.21.0",
+    "tree-sitter-typescript": "^0.21.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
